add js :change navbar color on scroll

--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -29,7 +29,7 @@
     
     .navbar{
          height: 80px;
-         background-color: white;
+         /* background-color: white; */
          padding-bottom: 0;
      }
      .navbar-toggler {
